examples/test/testpolicy17909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17909
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key6: value0
      key37: value35
      key48: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value17
          key47: value48
      podSelector:
        matchLabels:
          key2: value36
          key13: value2
          key43: value43
